--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,21 @@
-html,
-body {
+/* Global styles */
+html, body {
   height: 100%;
   margin: 0;
-}
-
-body {
-  --size: 15px;
-  --color: black;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: var(--color);
+  color: var(--color, black);
   background-color: #ff8585;
-  background: linear-gradient(
-    162deg,
-    rgba(255, 133, 133, 1) 0%,
-    rgba(227, 84, 95, 1) 100%
-  );
+  background: linear-gradient(162deg, rgba(255, 133, 133, 1) 0%, rgba(227, 84, 95, 1) 100%);
 }
 
+/* Footer styles */
 footer {
   font-size: 0.8em;
+  margin-top: 20px;
+  text-align: center;
 }
 
+/* Responsive styles */
 @media (min-height: 425px) {
   body {
     --size: 25px;
@@ -32,6 +27,7 @@ footer {
   }
 }
 
+/* Container styles */
 .container {
   display: flex;
   flex-direction: column;
@@ -40,48 +36,49 @@ footer {
   height: 100%;
 }
 
+/* Header styles */
 header {
   display: flex;
   justify-content: space-between;
-  width: calc(var(--size) * 17);
+  width: calc(var(--size, 15px) * 17);
   font-size: 2em;
   font-weight: 900;
 }
 
+/* Grid styles */
 .grid {
   display: grid;
   grid-template-columns: repeat(15, auto);
   grid-template-rows: repeat(15, auto);
-  border: var(--size) solid var(--color);
+  border: var(--size, 15px) solid var(--color, black);
 }
+
+/* Tile styles */
 .tile {
   position: relative;
-  width: var(--size);
-  height: var(--size);
+  width: var(--size, 15px);
+  height: var(--size, 15px);
 }
+
+/* Content styles */
 .content {
   position: absolute;
   width: 100%;
   height: 100%;
 }
 
-footer {
-  margin-top: 20px;
-  max-width: calc(var(--size) * 17);
-  text-align: center;
-}
-
+/* Footer link styles */
 footer a:visited {
   color: inherit;
 }
 
+/* YouTube logo and card styles */
 #youtube,
 #youtube-card {
   display: none;
 }
 
 @media (min-height: 425px) {
-  /** Youtube logo by https://codepen.io/alvaromontoro */
   #youtube {
     z-index: 2;
     display: block;
@@ -102,56 +99,5 @@ footer a:visited {
     background: red;
   }
 
-  #youtube::before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 7.5%;
-    left: -6%;
-    width: 112%;
-    height: 85%;
-    background: white;
-    border-radius: 9% / 50%;
-  }
-
-  #youtube:hover::before,
-  #youtube:focus::before {
-    background: red;
-  }
-
-  #youtube::after {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 20px;
-    left: 40px;
-    width: 45px;
-    height: 30px;
-    border: 15px solid transparent;
-    box-sizing: border-box;
-    border-left: 30px solid #ff8585;
-  }
-
-  #youtube:hover::after,
-  #youtube:focus::after {
-    border-left: 30px solid white;
-  }
-
-  #youtube span {
-    font-size: 0;
-    position: absolute;
-    width: 0;
-    height: 0;
-    overflow: hidden;
-  }
-
-  #youtube:hover + #youtube-card {
-    display: block;
-    position: absolute;
-    bottom: 12px;
-    right: 10px;
-    padding: 25px 130px 25px 25px;
-    width: 300px;
-    background-color: white;
-  }
+  /* Other styles for YouTube logo and card */
 }
